fix: melhorando visibilidade do feedback dos formularios de cadastro e edição

--- a/frontend/src/app/editar/editar.component.css
+++ b/frontend/src/app/editar/editar.component.css
@@ -18,7 +18,7 @@ body {
   p {
     text-align: center;
     font-size: 14px;
-    color: #757575;
+    color: #ff0000;
     margin-bottom: 20px;
   }
   
